# bevy_fps_physics_experiments

./: .gitattributes  Cargo.toml
assets/models/: Monkey.gltf  box-small.glb
assets/prefabs/: Monkey.prototype.ron  blaster.prototype.ron  blaster_model.prototype.ron  small_box.prototype.ron  small_box_model.prototype.ron
src/: main.rs
src/components/: mod.rs  rapier_helpers.rs
src/experiments/: mod.rs  systems.rs
src/general/: fixed_joint_with_rotation.rs  general_components.rs  mod.rs
src/player/: mod.rs  player_components.rs  player_systems.rs
