[package]
name = "snuckles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bevy = {git = "https://github.com/bevyengine/bevy.git", branch = "release-0.11.2"}
bevy = "0.11.2"
bevy_proto = {git = "https://github.com/MrGVSV/bevy_proto.git"}
color-eyre = "0.6.2"
bevy_editor_pls = { path="../../BevyInvestigations/bevy_editor_pls/crates/bevy_editor_pls" }
bevy_sprite3d = "2.6.0"
# bevy_mod_debugdump = "0.8.1"
bevy_xpbd_3d = { git = "https://github.com/Jondolf/bevy_xpbd", branch = "main", features= ["debug-plugin"] }
# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3


[profile.release]
debug = true